kustomize/overlays/stage/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple
spec:
  replicas: 2
  template:
    spec:
      containers:
      - image: quay.io/wpernath/simple-quarkus:stage
        imagePullPolicy: Always
        name: staging-simple
        ports:
          - containerPort: 8080
            protocol: TCP
