kustomize/overlays/stage/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: simple
spec:
  host: staging-simple-wpernath-article.apps.beta.rhepds.com
  to:
    kind: Service
    name: staging-simple
